Import tuition payment plans

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -972,3 +972,80 @@ error.MassiveDebtGenerationRequest.student.not.found=Linha {0}: O aluno não foi 
 error.MassiveDebtGenerationRequest.registration.not.found=Linha {0}: A matrícula com o plano curricular indicado não foi encontrado.
 error.MassiveDebtGenerationRequest.degree.code.invalid=Linha {0}: O código do curso é inválido.
 error.MassiveDebtGenerationRequest.degree.not.found=Linha {0}: O curso não foi encontrado.
+
+
+# ImportTuitionPaymentPlans
+
+label.title.importTuitionPaymentPlans=Importar planos de propinas
+
+label.ImportTuitionPaymentPlans.search=Pedidos de importação de propina
+label.ImportTuitionPaymentPlans.create=Criar pedido de importação de propina
+label.ImportTuitionPaymentPlans.view=Detalhes do pedido de propina
+
+label.ImportTuitionPaymentPlans.process.success=Os planos de propinas foram importados com sucesso.
+
+label.TuitionPaymentPlanImportFile.tuitionPaymentPlanGroup=Tipo de propina
+label.TuitionPaymentPlanImportFile.versioningCreationDate=Data de criação
+label.TuitionPaymentPlanImportFile.finantialEntity=Instituição Financeira
+label.TuitionPaymentPlanImportFile.executionYear=Ano Lectivo
+label.TuitionPaymentPlanImportFile.product=Produto
+label.TuitionPaymentPlanImportFile.whenProcessed=Data de processamento
+label.TuitionPaymentPlanImportFile.requestFile=Ficheiro
+
+error.TuitionPaymentPlanImportFile.finantialEntity.required=A entidade financeira é obrigatória.
+error.TuitionPaymentPlanImportFile.product.required=O produto é obrigatório.
+error.TuitionPaymentPlanImportFile.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
+error.TuitionPaymentPlanImportFile.executionYear.required=O ano lectivo é obrigatório.
+error.TuitionPaymentPlanImportFile.already.processed=O pedido de importação já foi processado.
+
+error.TuitionPaymentPlanImportFile.installment.product.not.found=Linha {0}: O produto <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.tuitionCalculationType.required=Linha {0}: A forma de cálculo é obrigatória.
+error.TuitionPaymentPlanImportFile.installment.tuitionCalculationType.not.found=Linha {0}: A forma de cálculo <strong>{1}</strong> é inválida.
+error.TuitionPaymentPlanImportFile.installment.ectsCalculationType.required=Linha {0}: O cálculo do montante é obrigatória.
+error.TuitionPaymentPlanImportFile.installment.ectsCalculationType.not.found=Linha {0}: O cálculo do montante <strong>{1}</strong> é inválida.
+error.TuitionPaymentPlanImportFile.installment.fixedAmount.required=Linha {0}: O montante é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.fixedAmount.invalid=Linha {0}: O montante <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.factor.required=Linha {0}: O factor é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.totalEctsOrUnits.required=Linha {0}: O total disciplinas/ects é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.factor.invalid=Linha {0}: O factor <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.totalEctsOrUnits.invalid=Linha {0}: O total disciplinas/ects <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.beginDate.required=Linha {0}: A data de início é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.beginDate.invalid=Linha {0}: A data de início <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.dueDateCalculationType.required=Linha {0}: A data de vencimento é obrigatória.
+error.TuitionPaymentPlanImportFile.installment.dueDateCalculationType.invalid=Linha {0}: A data de vencimento <strong>{1}</strong> é inválida.
+error.TuitionPaymentPlanImportFile.installment.fixedDueDate.required=Linha {0}: A data fixa é obrigatória.
+error.TuitionPaymentPlanImportFile.installment.fixedDueDate.invalid=Linha {0}: A data fixa <strong>{1}</strong> é inválida.
+error.TuitionPaymentPlanImportFile.installment.numberOfDaysAfterCreation.required=Linha {0}: O nº dias é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.numberOfDaysAfterCreation.invalid= Linha {0}: O nº dias <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.blockAcademicalActs.required=Linha {0}: O bloqueio dos actos académicos é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.blockAcademicalActs.invalid=Linha {0}: O bloqueio dos actos académicos <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.applyInterests.required=Linha {0}: Aplicar juros é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.applyInterests.invalid=Linha {0}: Aplicar juros <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.interestsType.required=Linha {0}: O cálculo de juros é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.interestType.invalid=Linha {0}: O cálculo de juros <strong>{1}</strong> é inválido.
+
+error.TuitionPaymentPlanImportFile.invalid.default.payment.plan.value=Linha {0}: O plano principal <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.degreeType.required=Linha {0}: O tipo de curso é obrigatório.
+error.TuitionPaymentPlanImportFile.degreeType.not.found=Linha {0}: O tipo de curso <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.degree.not.found=Linha {0}: O curso <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.degree.not.of.degreeType=Linha {0}: O curso <strong>{2}</strong> não é do tipo <strong>{1}</strong>.
+error.TuitionPaymentPlanImportFile.degreeName.not.equals=Linha {0}: O nome do curso <strong>{1}</strong> não é igual: <strong>{2}</strong>.
+error.TuitionPaymentPlanImportFile.dcp.requires.degree.code=Linha {0}: O plano curricular <strong>{1}</strong> requer o curso.
+error.TuitionPaymentPlanImportFile.dcp.not.found=Linha {0}: O plano curricular <strong>{1}</strong> é inválido no curso <strong>{2}</strong>.
+error.TuitionPaymentPlanImportFile.not.allowed.to.add.degree=Linha {0}: A entidade financeira não tem permissões para criar planos no curso <strong>{1}</strong>.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.regimeType.empty=Linha {0}: O plano principal requer que o regime não seja preenchido.
+error.TuitionPaymentPlanImportFile.regimeType.not.found=Linha {0}: O regime <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.ingressionType.empty=Linha {0}: O plano principal requer que o ingresso não seja preenchido.
+error.TuitionPaymentPlanImportFile.ingression.type.not.found=Linha {0}: O ingresso <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.curricularYearValue.empty=Linha {0}: O plano principal requer que o ano curricular não seja preenchido.
+error.TuitionPaymentPlanImportFile.curricularYear.type.not.found=Linha {0}: O ano curricular <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.semesterValue.empty=Linha {0}: O plano principal requer que o semestre não seja preenchido.
+error.TuitionPaymentPlanImportFile.executionSemester.not.found=Linha {0}: O semestre <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.statute.empty=Linha {0}: O plano principal requer que o estatuto não seja preenchido.
+error.TuitionPaymentPlanImportFile.statuteType.not.found=Linha {0}: O estatuto <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.firstTimeStudentValue.empty=Linha {0}: O plano principal requer que 1º ano 1º vez não seja preenchido.
+error.TuitionPaymentPlanImportFile.invalid.firstTimeStudent.invalid=Linha {0}: 1º Ano 1º Vez <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.customizedValue.empty=Linha {0}: O plano principal requer que o customizado não seja preenchido.
+error.TuitionPaymentPlanImportFile.customized.invalid=Linha {0}: Customizado <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.invalid.customized.requires.paymentPlanName=Linha {0}: Customizado requer que o nome do plano seja preenchido.
+
