Import tuition payment plans

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -978,9 +978,12 @@ error.MassiveDebtGenerationRequest.degree.not.found=Linha {0}: O curso não foi e
 
 label.title.importTuitionPaymentPlans=Importar planos de propinas
 
-label.ImportTuitionPaymentPlans.search=Pedidos de importação de propina
-label.ImportTuitionPaymentPlans.create=Criar pedido de importação de propina
-label.ImportTuitionPaymentPlans.view=Detalhes do pedido de propina
+label.ImportTuitionPaymentPlans.search=Pedidos de importação de planos de propina
+label.ImportTuitionPaymentPlans.create=Criar pedido de importação de planos de propina
+label.ImportTuitionPaymentPlans.view=Detalhes do pedido de planos de propina
+label.ImportTuitionPaymentPlans.process=Processar
+label.ImportTuitionPaymentPlans.download=Download
+label.ImportTuitionPaymentPlans.tuition.payment.plan=Plano
 
 label.ImportTuitionPaymentPlans.process.success=Os planos de propinas foram importados com sucesso.
 
@@ -1031,7 +1034,7 @@ error.TuitionPaymentPlanImportFile.degree.not.found=Linha {0}: O curso <strong>{
 error.TuitionPaymentPlanImportFile.degree.not.of.degreeType=Linha {0}: O curso <strong>{2}</strong> não é do tipo <strong>{1}</strong>.
 error.TuitionPaymentPlanImportFile.degreeName.not.equals=Linha {0}: O nome do curso <strong>{1}</strong> não é igual: <strong>{2}</strong>.
 error.TuitionPaymentPlanImportFile.dcp.requires.degree.code=Linha {0}: O plano curricular <strong>{1}</strong> requer o curso.
-error.TuitionPaymentPlanImportFile.dcp.not.found=Linha {0}: O plano curricular <strong>{1}</strong> é inválido no curso <strong>{2}</strong>.
+error.TuitionPaymentPlanImportFile.dcp.not.found=Linha {0}: O plano curricular <strong>{2}</strong> é inválido no curso <strong>{1}</strong>.
 error.TuitionPaymentPlanImportFile.not.allowed.to.add.degree=Linha {0}: A entidade financeira não tem permissões para criar planos no curso <strong>{1}</strong>.
 error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.regimeType.empty=Linha {0}: O plano principal requer que o regime não seja preenchido.
 error.TuitionPaymentPlanImportFile.regimeType.not.found=Linha {0}: O regime <strong>{1}</strong> é inválido.
@@ -1048,4 +1051,7 @@ error.TuitionPaymentPlanImportFile.invalid.firstTimeStudent.invalid=Linha {0}: 1
 error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.customizedValue.empty=Linha {0}: O plano principal requer que o customizado não seja preenchido.
 error.TuitionPaymentPlanImportFile.customized.invalid=Linha {0}: Customizado <strong>{1}</strong> é inválido.
 error.TuitionPaymentPlanImportFile.invalid.customized.requires.paymentPlanName=Linha {0}: Customizado requer que o nome do plano seja preenchido.
-
+error.TuitionPaymentPlanImportFile.sheet.has.no.payment.plans=A folha <strong>{0}</strong> não tem nenhum plano de propinas.
+error.TuitionPaymentPlanImportFile.sheet.with.installments.empty=A folha <strong>{0}</strong> não tem nenhuma prestação.
+error.TuitionPaymentPlanImportFile.dcp.required=Linha {0}: Se o curso é especificado o nome do plano curricular é obrigatório.
+error.TuitionPaymentPlanImportFile.select.default.or.at.least.one.option=Linha {0}: Deverá especificar se o plano é principal ou indicar uma outra opção.
