Add registration protocol and interest fixed amount in tuition payment plan importation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1026,6 +1026,8 @@ error.TuitionPaymentPlanImportFile.installment.applyInterests.required=Linha {0}
 error.TuitionPaymentPlanImportFile.installment.applyInterests.invalid=Linha {0}: Aplicar juros <strong>{1}</strong> é inválido.
 error.TuitionPaymentPlanImportFile.installment.interestsType.required=Linha {0}: O cálculo de juros é obrigatório.
 error.TuitionPaymentPlanImportFile.installment.interestType.invalid=Linha {0}: O cálculo de juros <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.installment.interestFixedAmount.required=Linha {0}: O montante de juro é obrigatório.
+error.TuitionPaymentPlanImportFile.installment.interestFixedAmount.invalid=Linha {0}: O montante de juro <strong>{1}</strong> é inválido.
 
 error.TuitionPaymentPlanImportFile.invalid.default.payment.plan.value=Linha {0}: O plano principal <strong>{1}</strong> é inválido.
 error.TuitionPaymentPlanImportFile.degreeType.required=Linha {0}: O tipo de curso é obrigatório.
@@ -1038,6 +1040,8 @@ error.TuitionPaymentPlanImportFile.dcp.not.found=Linha {0}: O plano curricular <
 error.TuitionPaymentPlanImportFile.not.allowed.to.add.degree=Linha {0}: A entidade financeira não tem permissões para criar planos no curso <strong>{1}</strong>.
 error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.regimeType.empty=Linha {0}: O plano principal requer que o regime não seja preenchido.
 error.TuitionPaymentPlanImportFile.regimeType.not.found=Linha {0}: O regime <strong>{1}</strong> é inválido.
+error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.registrationProtocol.empty=Linha {0}: O plano principal requer que o acordo não seja preenchido.
+error.TuitionPaymentPlanImportFile.registrationProtocol.not.found=Linha {0}: O acordo <strong>{1}</strong> é inválido.
 error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.ingressionType.empty=Linha {0}: O plano principal requer que o ingresso não seja preenchido.
 error.TuitionPaymentPlanImportFile.ingression.type.not.found=Linha {0}: O ingresso <strong>{1}</strong> é inválido.
 error.TuitionPaymentPlanImportFile.defaultPaymentPlan.requires.curricularYearValue.empty=Linha {0}: O plano principal requer que o ano curricular não seja preenchido.
