Tuition installment tariffs may block not payed debts In massive debts creation use registration number instead of student number, curricular plan is optional

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -234,6 +234,7 @@ label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricul
 label.TuitionPaymentPlan.extracurricular.debit.entry.name=Propina em Unidade Extracurricular: {0} - {1} ({2} ECTS)
 label.TuitionPaymentPlan.academicalActBlockingOff=Não bloqueia actos académicos
 label.TuitionPaymentPlan.academicalActBlockingOn=Bloqueia actos académicos
+label.TuitionPaymentPlan.blockAcademicActsOnDebt=Bloqueia actos académicos antes do vencimento
 label.TuitionPaymentPlan.standalone=Curriculares isoladas
 label.TuitionPaymentPlan.extracurricular=Extracurriculares
 label.TuitionPaymentPlan.degreeCurricularPlan=Plano curricular
