Add util methods to tariff bean

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -63,6 +63,7 @@ label.TuitionPaymentPlan.edit.success=A prestação de propina foi editada com suc
 # ENTITY FIELDS TRANSLATION
 #--------------------------
 
+label.AcademicTariff.emolument=Emolumento
 label.AcademicTariff.administrativeOffice=Secretaria
 label.AcademicTariff.endDate=Data de fim
 label.AcademicTariff.beginDate=Data de início
