Verbose error messages Fix bug on tuition tariff due date

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -111,7 +111,7 @@ error.AcademicTariff.urgencyRate.greater.than.hundred=A taxa de urgência não pod
 error.AcademicTariff.languageTranslationRate.required=Taxa por tradução é obrigatória.
 error.AcademicTariff.languageTranslationRate.negative=A taxa por tradução não pode ser negativa.
 error.AcademicTariff.languageTranslationRate.greater.than.hundred=A taxa de tradução não pode ser superior a 100%.
-error.AcademicTariff.overlaps.with.other=A tarifa sobrepõe a outra deste emolumento. Verifique as datas de início e de fim.
+error.AcademicTariff.overlaps.with.other=A tarifa sobrepõe a outra do emolumento <strong>{0}</strong>. Verifique as datas de início e de fim.
 label.AcademicTariff.delete.success=A tarifa foi removida com sucesso.
 
 label.AcademicTariff.period=Período
@@ -248,7 +248,7 @@ error.TuitionPaymentPlan.degreeCurricularPlan.required=O plano curricular do cur
 error.TuitionPaymentPlan.customized.required.name=O nome do plano é obrigatório.
 error.TuitionPaymentPlan.default.payment.plan.must.be.for.registration=Apenas os planos de propinas para matrículas podem ser principais.
 error.TuitionPaymentPlan.default.payment.plan.tariffs.calculation.type.not.fixed.amount=Os planos de propinas principais só podem ter prestações de valor fixo.
-error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de propinas principal para o plano curricular e ano lectivo.
+error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de propinas principal para o plano curricular <strong>{0}</strong> e ano lectivo.
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se é principal e se existem outros planos com prestações calculadas a partir deste.
 error.TuitionPaymentPlan.installments.must.not.be.empty=O plano de propinas deve ter pelo menos uma prestação.
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se já foram criadas dívidas associadas as prestações das propinas.
