Maximum amount for tuition installments (including standalone and extracurricular)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -239,6 +239,7 @@ label.TuitionPaymentPlan.blockAcademicActsOnDebt=Bloqueia actos académicos antes
 label.TuitionPaymentPlan.standalone=Curriculares isoladas
 label.TuitionPaymentPlan.extracurricular=Extracurriculares
 label.TuitionPaymentPlan.degreeCurricularPlan=Plano curricular
+label.TuitionPaymentPlan.maximumAmount=Montante Máximo
 
 label.TuitionPaymentPlan.copy.success=O plano de propinas foi copiado com sucesso.
 
@@ -269,7 +270,7 @@ error.TuitionPaymentPlan.factor.required=O factor é obrigatório.
 error.TuitionPaymentPlan.totalEctsOrUnits.required=O total de ECTS ou disciplinas por ano é obrigatório.
 error.TuitionPaymentPlan.installment.already.with.product=O produto associado a prestação já está inserido. 
 error.TuitionPaymentPlan.specify.at.least.one.condition=Especifique pelo menos uma condição.
-
+error.TuitionPaymentPlan.maximumAmount.required=O montante máximo é obrigatório com um valor positivo.
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
@@ -310,6 +311,8 @@ label.TuitionInstallmentTariff.installmentOrder=Nº Prestação
 label.TuitionInstallmentTariff.amount=Montante
 label.TuitionInstallmentTariff.product=Produto
 label.TuitionInstallmentTariff.installments.empty=Não foram adicionadas prestações.
+label.TuitionInstallmentTariff.applyMaximumAmount=Aplicar valor máximo?
+label.TuitionInstallmentTariff.maximumAmount=Valor máximo
 
 label.TuitionInstallmentTariff.debitEntry.name.registration={0}º Prestação da Propina em {1} ({2})
 label.TuitionInstallmentTariff.debitEntry.name.standalone={0}º Prestação da Propina em Unidades Curriculares Isoladas ({1} - {2})
@@ -336,6 +339,7 @@ error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} po
 error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propinas principal não está definido.
 error.TuitionInstallmentTariff.defaultPaymentPlanCourseFunctionCostIndexed.not.supported.for.registrationTuition=O cálculo por custo de funcionamento da disciplina não é suportado em propinas de matrícula.
 error.TuitionInstallmentTariff.courseFunctionCourse.not.defined=O custo de funcionamento para a disciplina não está definido.
+error.TuitionInstallmentTariff.maximum.amount.required=Na propina do curso <strong>{0}  - {1}</strong> o valor máximo é obrigatório e deverá ser positivo.
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
