Academic service request debit entry description format Extend academic generation debt rules to relax on product entries requirement

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -128,6 +128,7 @@ label.ServiceRequestMapEntry.serviceRequestTypeOptions=Opções
 label.ServiceRequestMapEntry.createEventOnSituation=Lançar emolumento no estado
 label.ServiceRequestMapEntry.generatePaymentCode=Gerar referência de MB?
 label.ServiceRequestMapEntry.paymentCodePool=Intervalo de Códigos de Pagamento
+label.ServiceRequestMapEntry.debitEntryDescriptionExtensionFormat=Descrição adicional da dívida 
 label.ServiceRequestMapEntry.create.success=O mapeamento foi criado com sucesso.
 label.ServiceRequestMapEntry.delete.success=O mapeamento foi removido com sucesso.
 
@@ -141,6 +142,7 @@ label.FinantialEntity.name=Entidade Financeira
 label.Product.name=Emolumento
 label.Product.code=Código
 label.Product.vatType=Taxa de IVA
+label.Product.tuitionInstallmentOrder=Nº Prestação Propina
 
 label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NAME=Serviço Académico
 label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NUMBER_YEAR=Nº do pedido
@@ -271,6 +273,7 @@ error.TuitionPaymentPlan.totalEctsOrUnits.required=O total de ECTS ou disciplina
 error.TuitionPaymentPlan.installment.already.with.product=O produto associado a prestação já está inserido. 
 error.TuitionPaymentPlan.specify.at.least.one.condition=Especifique pelo menos uma condição.
 error.TuitionPaymentPlan.maximumAmount.required=O montante máximo é obrigatório com um valor positivo.
+error.TuitionPaymentPlan.delete.after.first=Deverá remover as posteriores primeiro. 
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
