Improve academic debt rule UI Aggregate only debts strategy redefine academix taxes due date by tuition due date

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -502,6 +502,7 @@ label.manageacademicdebtgenerationrule.show.dcps=Ver Planos Curriculares
 label.manageacademicdebtgenerationrule.degreeCurricularPlans=Planos Curriculares 
 label.manageacademicdebtgenerationrule.execute.background=Execução periódica
 label.manageacademicdebtgenerationrule.not.execute.background=Execução a pedido
+label.manageacademicdebtgenerationrule.editDegreeCurricularPlans=Editar Planos Curriculares
 
 # AcademicDebtGenerationRule
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
@@ -512,6 +513,7 @@ label.AcademicDebtGenerationRule.degreeCurricularPlanDataSource.is.empty=Não exi
 label.AcademicDebtGenerationRule.degreeType=Tipo de Curso
 label.AcademicDebtGenerationRule.background.executed=Executado periódicamente
 label.AcademicDebtGenerationRule.background.not.executed=Executado apenas a pedido
+label.AcademicDebtGenerationRule.academicTaxDueDateAlignmentType=Uniformizar data de vencimento de taxas académicas
 
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
@@ -536,6 +538,8 @@ label.AcademicDebtGenerationRule.chooseExecutionYear=Escolher Ano Lectivo
 label.AcademicDebtGenerationRule.choose=Escolher
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
 label.AcademicDebtGenerationRule.numberOfDaysToDueDate=Nº dias a data de vencimento
+label.AcademicDebtGenerationRule.alignment.not.applied=Uniformização não aplicada
+label.AcademicDebtGenerationRule.delete.success=A regra foi removida com sucesso.
 label.AcademicDebtGenerationRuleType.name=Tipo de Regra
 
 label.log.date=Data de Criação: 
@@ -548,8 +552,8 @@ error.AcademicDebtGenerationRule.entries.required=Adicione pelo menos um produto
 error.AcademicDebtGenerationRule.delete.impossible=Não é possível remover a regra.
 error.AcademicDebtGenerationRule.degreeCurricularPlan.not.active=O plano curricular não está activo: {0}
 error.AcademicDebtGenerationRule.degreeCurricularPlans.required=A regra deverá estar definida pelo menos para um plano curricular.
-error.AcademicDebtGenerationRule.debitEntry.with.none.or.annuled.finantial.document=Uma ou mais dívidas não tem uma nota de dívida associada.
-label.AcademicDebtGenerationRule.delete.success=A regra foi removida com sucesso.
+error.AcademicDebtGenerationRule.debitEntry.with.none.or.annuled.finantial.document=Uma ou mais dívidas não tem uma nota de dívida associada: {0}
+error.AcademicDebtGenerationRule.paymentCodePool.required=A Pool Referências MB é obrigatória.
 
 error.AcademicDebtGenerationRuleEntry.createDebt.only.supported.for.tuition.or.academicTax=A criação de dívida só é suportada em propinas ou taxas académicas
 
@@ -1001,3 +1005,7 @@ label.TreasuryImportFile.sheet=Folha Excel
 
 error.TreasuryImportFile.already.processed=O pedido de importação já está processado.
 error.TreasuryImportFile.type.required=O tipo de importação é obrigatório.
+
+# AcademicTaxDueDateAlignmentType
+AcademicTaxDueDateAlignmentType.TUITION_INSTALLMENT_MAX_DUE_DATE=Prestação de propina com a maior data de vencimento
+AcademicTaxDueDateAlignmentType.TUITION_INSTALLMENT_MIN_DUE_DATE=Prestação de propina com a menor data de vencimento
