--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -978,13 +978,14 @@ error.MassiveDebtGenerationRequest.student.name.invalid=Linha {0}: O nome do alu
 error.MassiveDebtGenerationRequest.dcp.code.invalid=Linha {0}: O plano curricular é inválido.
 error.MassiveDebtGenerationRequest.student.name.not.equal=Linha {0}: O nome do aluno não é igual ao nome registado no processo do aluno.
 error.MassiveDebtGenerationRequest.dcp.name.not.equal=Linha {0}: A designação do plano curricular não é igual.
-error.MassiveDebtGenerationRequest.tuition.payment.plan.not.found=Linha {0}: O plano de propinas com a designação indicada não existe.
+error.MassiveDebtGenerationRequest.tuition.payment.plan.not.found=Linha {0}: O plano de propinas com a designação <strong>{2}</strong> indicada não existe para o plano curricular <strong>{1}</strong>.
 error.MassiveDebtGenerationRequest.invalid.sheet=O ficheiro Excel submetido não é válido. Certifique-se que o formato é XLSX.
 error.MassiveDebtGenerationRequest.found.more.than.one.registration=Linha {0}: Foi encontrado mais do que uma matrícula activa para o plano curricular indicado.
 error.MassiveDebtGenerationRequest.student.not.found=Linha {0}: O aluno não foi encontrado.
 error.MassiveDebtGenerationRequest.registration.not.found=Linha {0}: A matrícula com o plano curricular indicado não foi encontrado.
 error.MassiveDebtGenerationRequest.degree.code.invalid=Linha {0}: O código do curso é inválido.
 error.MassiveDebtGenerationRequest.degree.not.found=Linha {0}: O curso não foi encontrado.
+error.MassiveDebtGenerationRequestFile.debt.not.created=Linha {0}: A dívida não foi lançada para o aluno <strong>{1} - {2}</strong> devido ao seguinte motivo: <strong>{3}</strong>
 
 # ImportTreasury
 
@@ -1009,3 +1010,55 @@ error.TreasuryImportFile.type.required=O tipo de importação é obrigatório.
 # AcademicTaxDueDateAlignmentType
 AcademicTaxDueDateAlignmentType.TUITION_INSTALLMENT_MAX_DUE_DATE=Prestação de propina com a maior data de vencimento
 AcademicTaxDueDateAlignmentType.TUITION_INSTALLMENT_MIN_DUE_DATE=Prestação de propina com a menor data de vencimento
+
+# ExemptionsGenerationRequestFile
+
+error.ExemptionsGenerationRequestFile.treasuryExemptionType.required=A isenção é obrigatória.
+error.ExemptionsGenerationRequestFile.student.number.required=Linha {0}: O nº de aluno é obrigatório.
+error.ExemptionsGenerationRequestFile.student.name.required=Linha {0}: O nome do aluno é obrigatório.
+error.ExemptionsGenerationRequestFile.degree.code.required=Linha {0}: O código do curso é obrigatório.
+error.ExemptionsGenerationRequestFile.execution.year.required=Linha {0}: O ano lectivo é obrigatório.
+error.ExemptionsGenerationRequestFile.treasuryEvent.required=Linha {0}: A dívida académica é obrigatória.
+error.ExemptionsGenerationRequestFile.percentageValue.required=Linha {0}: A percentagem (%) é obrigatória.
+error.ExemptionsGenerationRequestFile.reasonValue.required=Linha {0}: O motivo é obrigatório.
+error.ExemptionsGenerationRequestFile.student.number.invalid=Linha {0}: O número do aluno <strong>{1}</strong> é inválido.
+error.ExemptionsGenerationRequestFile.degree.invalid=Linha {0}: O código do curso <strong>{1}</strong> é inválido.
+error.ExemptionsGenerationRequestFile.executionYear.invalid=Linha {0}: O ano lectivo <strong>{1}</strong> é inválido.
+error.ExemptionsGenerationRequestFile.registration.invalid=Linha {0}: A matrícula para o aluno nº <strong>{1}</strong> e código de curso <strong>{2}</strong> não foi encontrado.
+error.ExemptionsGenerationRequestFile.student.name.not.equal=Linha {0}: O nome do aluno <strong>{1}</strong> não é igual: <strong>{2}</strong>.
+error.ExemptionsGenerationRequestFile.student.has.no.debt.account=Linha {0}: O aluno <strong>{1}</strong> não tem conta corrente.
+error.ExemptionsGenerationRequestFile.found.more.than.one.treasuryEvent=Linha {0}: Foi encontrado mais do que uma dívida académica com a designação <strong>{1}</strong>.
+error.ExemptionsGenerationRequestFile.treasuryEvent.invalid=Linha {0}: A dívida académica com a designação <strong>{1}</strong> não foi encontrada.
+error.ExemptionsGenerationRequestFile.debitEntry.invalid=Linha {0}: O item de dívida com a designação <strong>{1}</strong> não foi encontrado no evento académico <strong>{2}</strong>.
+error.ExemptionsGenerationRequestFile.debitEntry.found.more.than.one=Linha {0}: Foi encontrada mais do que um item de dívida com a designação <strong>{1}</strong> no evento académico <strong>{2}</strong>.
+error.ExemptionsGenerationRequestFile.percentage.invalid=Linha {0}: A percentagem <strong>{1}</strong> é inválida.
+error.ExemptionsGenerationRequestFile.installmentOrder.invalid=Linha {0}: A prestação de propina <strong>{1}</strong> é inválida.
+error.ExemptionsGenerationRequestFile.installmentOrders.required=Linha {0}: Para a dívida de propina de matrícula é obrigatório especificar pelo menos uma prestação.
+error.ExemptionsGenerationRequestFile.installmentOrder.debit.entries.found.more.than.one=Linha {0}: Foi encontrada mais do que uma dívida para a prestação de propina <strong>{1}</strong>.
+error.ExemptionsGenerationRequestFile.registration.not.found=Linha {0}: Não foi encontrada uma matrícula activa para o aluno <strong>{1}</strong> para o curso <strong>[{2}] {3}</strong>.
+error.ExemptionsGenerationRequestFile.invalid.sheet=A folha é inválida.
+error.ExemptionsGenerationRequestFile.result.empty=A folha não tem nenhuma isenção a lançar.
+error.ExemptionsGenerationRequestFile.event.has.no.debitEntries=Linha {0}: Não foram encontradas dívidas no evento académico <strong>{1}</strong>.
+error.ExemptionsGenerationRequestFile.event.found.more.than.one.debit.entry=Linha {0}: Foi encontrada mais do que uma dívida no evento académico <strong>{1}</strong>. Especifique a dívida na coluna <strong>Item de dívida</strong>.
+error.ExemptionsGenerationRequestFile.unable.to.create.exemption=Linha {0}: A isenção não foi lançada para o aluno <strong>{1} - {2}</strong> devido ao seguinte motivo: <strong>{3}</strong>
+
+label.ExemptionsGenerationRequestFile.title=Lançamento de isenções
+label.ExemptionsGenerationRequestFile.search=Pedidos para lançamento de isenções
+label.ExemptionsGenerationRequestFile.versioningCreationDate=Data de criação
+label.ExemptionsGenerationRequestFile.treasuryExemptionType=Isenção
+label.ExemptionsGenerationRequestFile.whenProcessed=Data de processamento
+label.ExemptionsGenerationRequestFile.content=Folha de alunos
+label.ExemptionsGenerationRequestFile.requestFile=Ficheiro
+label.ExemptionsGenerationRequestFile.confirm=Confirmar
+label.ExemptionsGenerationRequestFile.create=Efectuar pedido para lançamento de isenções
+
+label.ExemptionsGenerationRequestFile.student=Aluno
+label.ExemptionsGenerationRequestFile.studentNumber=Nº
+label.ExemptionsGenerationRequestFile.studentName=Nome
+label.ExemptionsGenerationRequestFile.degree=Curso
+label.ExemptionsGenerationRequestFile.exemption.summary=Sumário das isenções
+label.ExemptionsGenerationRequestFile.treasuryEvent=Dívida Académica
+label.ExemptionsGenerationRequestFile.discountPercentage=Percentagem (%)
+label.ExemptionsGenerationRequestFile.reason=Motivo
+label.ExemptionsGenerationRequestFile.debitEntry=Item de dívida
+label.ExemptionsGenerationRequestFile.discountAmount=Desconto aplicado
