Apply restrictions to academic debts generation rules

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -514,6 +514,7 @@ label.AcademicDebtGenerationRule.degreeType=Tipo de Curso
 label.AcademicDebtGenerationRule.background.executed=Executado periódicamente
 label.AcademicDebtGenerationRule.background.not.executed=Executado apenas a pedido
 label.AcademicDebtGenerationRule.academicTaxDueDateAlignmentType=Uniformizar data de vencimento de taxas académicas
+label.AcademicDebtGenerationRule.debtGenerationRuleRestriction=Restrição
 
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
