Generalize massive debt generation to treasury operations

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -938,12 +938,16 @@ label.CustomerAccounting.checking.account=Conta Corrente
 
 # MassiveDebtGenerationRequestFile
 
-label.title.massivetuitiondebtcreation=Lançamento de dívidas
+label.title.massivetuitiondebtcreation=Operações sobre dívidas
 
-label.MassiveDebtGenerationRequestFile.confirmdebtcreation=Confirmar lançamento de dívidas
-label.MassiveDebtGenerationRequestFile.create=Criar pedido para lançamento de dívidas
-label.MassiveDebtGenerationRequestFile.search=Pedidos para criação de dívidas
+label.MassiveDebtGenerationRequestFile.confirmdebtcreation=Confirmar operação sobre dívidas
+label.MassiveDebtGenerationRequestFile.create=Criar pedido de operação sobre dívidas
+label.MassiveDebtGenerationRequestFile.search=Pedidos para operações sobre dívidas
 label.MassiveDebtGenerationRequestFile.debtType=Dívida
+label.MassiveDebtGenerationRequestFile.massiveDebtGenerationType=Operação
+label.MassiveDebtGenerationRequestFile.reason=Motivo
+label.MassiveDebtGenerationRequestFile.dataDescription=Dados
+label.MassiveDebtGenerationRequestFile.finantialInstitution=Instituição Financeira
 
 label.MassiveDebtGenerationRequestFile.studentNumber=Nº aluno
 label.MassiveDebtGenerationRequestFile.studentName=Nome aluno
@@ -961,17 +965,22 @@ label.MassiveDebtGenerationRequestFile.content=Folha de alunos
 label.MassiveDebtGenerationRequestFile.degree=Curso
 label.MassiveDebtGenerationRequestFile.registration.startExecutionYear=Ano lectivo de início
 label.MassiveDebtGenerationRequestFile.success=As dívidas de propina foram lançadas com sucesso.
+label.MassiveDebtGenerationRequestFile.massiveDebtGenerationType=Operação
 
 label.MassiveDebtGenerationRequestFile.forAcademicTax.false=Propina de matrícula
 label.MassiveDebtGenerationRequestFile.forAcademicTax.true=Taxa académica
 label.MassiveDebtGenerationRequestFile.forAcademicTax=Dívida Académica
 
-label.MassiveDebtGenerationRequestFile.success=As dívidas foram lançadas com sucesso.
+label.MassiveDebtGenerationRequestFile.test.before.do=Aviso: Aconselha-se a realização da operação em ambiente de qualidade e confirmar o resultado pretendido.
+label.MassiveDebtGenerationRequestFile.success=A operação foi executada com sucesso.
 
+error.MassiveDebtGenerationRequestFile.massiveDebtGenerationType.required=A operação é obrigatória.
 error.MassiveDebtGenerationRequestFile.executionYear.required=O ano lectivo é obrigatório.
 error.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup.or.academic.tax.required=É necessário especificar o lançamento de propina ou taxa académica.
 error.MassiveDebtGenerationRequestFile.tuitionPaymentPlanGroup.and.academic.tax.specified=Foi especificado propina e taxa académica em simultâneo.
 error.MassiveDebtGenerationRequestFile.debtDate.required=A data de lançamento é obrigatória.
+error.MassiveDebtGenerationRequestFile.reason.required=O motivo é obrigatório.
+error.MassiveDebtGenerationRequestFile.finantialInstitution.required=A instituição financeira é obrigatória.
 error.MassiveDebtGenerationRequestFile.tuition.not.created=A propina não foi lançada no aluno <strong>{0} - {1}</strong> com o plano de propinas <strong>{2}</strong>.
 error.MassiveDebtGenerationRequestFile.academicTax.not.created=A taxa académica não foi lançada no aluno <strong>{0} - {1}</strong>.
 error.MassiveDebtGenerationRequest.student.number.invalid=Linha {0}: O nº de aluno é inválido.
@@ -987,6 +996,8 @@ error.MassiveDebtGenerationRequest.registration.not.found=Linha {0}: A matrícula
 error.MassiveDebtGenerationRequest.degree.code.invalid=Linha {0}: O código do curso é inválido.
 error.MassiveDebtGenerationRequest.degree.not.found=Linha {0}: O curso não foi encontrado.
 error.MassiveDebtGenerationRequestFile.debt.not.created=Linha {0}: A dívida não foi lançada para o aluno <strong>{1} - {2}</strong> devido ao seguinte motivo: <strong>{3}</strong>
+
+
 
 # ImportTreasury
 
