Print payment ref. codes

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -935,6 +935,7 @@ label.TreasuryExemptionReportEntryBean.header.reason=Motivo
 label.CustomerAccounting.person.with.no.customer=Não foram lançadas dívidas na sua conta corrente.
 label.CustomerAccounting.view.sibs.references.message=Para consultar as referências MB para pagamento clique no separador <strong>Referências para Pagamento</strong>.
 label.CustomerAccounting.checking.account=Conta Corrente
+label.CustomerAccounting.printpaymentplan=Imprimir dados para pagamento
 
 # MassiveDebtGenerationRequestFile
 
