Choose decimal separator on reports generation Add tuition payment plan creation validation: If default payment plan option is chosen than other options cannot be choosed

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -221,9 +221,9 @@ label.TuitionPaymentPlan.firstTimeStudent=1º ano 1º vez
 label.TuitionPaymentPlan.customized=Customizado
 label.TuitionPaymentPlan.customizedName=Nome do Plano
 label.TuitionPaymentPlan.withLaboratorialClasses=Com componente laboratorial
-label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan={0} planos criados
-label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.only.one=1 plano criado
-label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.zero=Sem planos criados
+label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan={0} planos de propinas criados
+label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.only.one=1 plano de propina criado
+label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.zero=Sem planos de propinas criados
 label.TuitionPaymentPlan.tuition.installments.debit.entries.created.success=As prestações de propina foram criadas com sucesso.
 label.TuitionPaymentPlan.curricularYear.description= {0}º ano curricular
 label.TuitionPaymentPlan.curricularSemester.description={0}º semestre curricular
@@ -251,6 +251,7 @@ error.TuitionPaymentPlan.degreeCurricularPlan.required=O plano curricular do cur
 error.TuitionPaymentPlan.customized.required.name=O nome do plano é obrigatório.
 error.TuitionPaymentPlan.default.payment.plan.must.be.for.registration=Apenas os planos de propinas para matrículas podem ser principais.
 error.TuitionPaymentPlan.default.payment.plan.tariffs.calculation.type.not.fixed.amount=Os planos de propinas principais só podem ter prestações de valor fixo.
+error.TuitionPaymentPlan.default.payment.plan.cannot.have.other.options=O plano principal não pode ter outras opções selecionadas.
 error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de propinas principal para o plano curricular <strong>{0}</strong> e ano lectivo.
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se é principal e se existem outros planos com prestações calculadas a partir deste.
 error.TuitionPaymentPlan.installments.must.not.be.empty=O plano de propinas deve ter pelo menos uma prestação.
@@ -435,8 +436,10 @@ label.manageTuitionPaymentPlan.installments=Prestações
 label.manageTuitionPaymentPlan.installments.new=Nova Prestação
 label.manageTuitionPaymentPlan.searchTuitionPaymentPlan=Planos de Propinas do Curso
 label.manageTuitionPaymentPlan.paymentPlan=Plano de Propinas
+label.manageTuitionPaymentPlan.degreeCurricularPlans.select=Selecionar plano curricular do curso
 
 label.DegreeCurricularPlan.degreeTypeName=Tipo de Curso
+label.DegreeCurricularPlan.name=Plano curricular
 label.DegreeCurricularPlan.executionYear=Ano Lectivo
 
 label.TuitionDebtCreationBean.create.tuition.debts=Lançar dívida de propina
@@ -733,6 +736,8 @@ label.DebtReportEntryBean.header.numberOfStandaloneEnrolments= # Insc. isoladas
 label.DebtReportEntryBean.header.numberOfExtracurricularEnrolments= # Insc. extra
 label.DebtReportEntryBean.header.tuitionPaymentPlan = Plano de pagamentos
 label.DebtReportEntryBean.header.tuitionPaymentPlanConditions = Condições do plano de pagamentos
+label.DebtReportEntryBean.header.documentAnnuled=Anulado?
+label.DebtReportEntryBean.header.documentAnnuledReason=Razão da anulação
 
 # DebtReportRequest
 
@@ -744,6 +749,7 @@ label.DebtReportRequest.descriptionlabel.DebtReportRequest.beginDate=Data de ini
 label.DebtReportRequest.beginDate=Data de inicio
 label.DebtReportRequest.endDate=Data de fim
 label.DebtReportRequest.description=Descrição
+label.DebtReportRequest.decimalSeparator=Separador decimal
 
 label.DebtReportRequest.debitEntriesSheetName=Dívidas
 label.DebtReportRequest.creditEntriesSheetName=Acertos
@@ -755,10 +761,12 @@ label.DebtReportRequest.academicActBlockingSuspensionSheetName=Suspensões de blo
 label.DebtReportRequest.paymentReferenceCodeSheetName=Referências SIBS
 label.DebtReportRequest.sibsTransactionDetailSheetName=Transacções SIBS
 label.DebtReportRequest.treasuryExemptionSheetName=Isenções
+label.DebtReportRequest.productsSheetName=Produtos
 
 error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
 error.DebtReportRequest.endDate.required = Data de fim obrigatória
 error.DebtReportRequest.type=Tipo de relatório obrigatório
+error.DebtReportRequest.decimalSeparator.invalid=O separador decimal é inválido. Deverá indicar '.' ou ','.
 error.DebtReportEntryBean.report.generation.verify.entry=Erro. Verifique a entrada.
 
 # DebtReportRequestResultFile
@@ -929,6 +937,10 @@ label.TreasuryExemptionReportEntryBean.header.debitEntryId=Id. Item de Dívida
 label.TreasuryExemptionReportEntryBean.header.debitEntryDescription=Descrição Dívida
 label.TreasuryExemptionReportEntryBean.header.exemptedAmount=Montante isentado
 label.TreasuryExemptionReportEntryBean.header.reason=Motivo
+
+label.ProductReportEntryBean.header.identification=Identificador
+label.ProductReportEntryBean.header.code=Código
+label.ProductReportEntryBean.header.name=Nome
 
 # CustomerAccounting
 
