--- a/src/main/webapp/WEB-INF/resources/AcademicTreasuryResources_en.properties
+++ b/src/main/webapp/WEB-INF/resources/AcademicTreasuryResources_en.properties
@@ -49,6 +49,7 @@ label.createinsertinstallments.confirmDelete=Are you sure you want to remove?
 label.CustomerAccounting.person.with.no.customer=There are no debits on your account.
 label.CustomerAccounting.view.sibs.references.message=To view ATM payment references click in <strong>Payment References</strong> tab.
 label.CustomerAccounting.checking.account=Checking Account
+label.CustomerAccounting.printpaymentplan=Print payment information
 
 # PaymentReferenceCode
 label.customer.PaymentReferenceCode.entity=Entity
