--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -224,8 +224,9 @@ label.TuitionPaymentPlan.withLaboratorialClasses=Com componente laboratorial
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan={0} planos de propinas criados
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.only.one=1 plano de propina criado
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.zero=Sem planos de propinas criados
-label.TuitionPaymentPlan.tuition.installments.debit.entries.created.success=As prestações de propina foram criadas com sucesso.
-label.TuitionPaymentPlan.curricularYear.description= {0}º ano curricular
+label.TuitionPaymentPlan.tuition.installments.debit.entries.created.success=O plano de propinas foram criadas com sucesso.
+label.TuitionPaymentPlan.tuition.installments.debit.entries.created.insuccess=O plano de propinas não foi lançado. Se já está lançado deverá anular o plano de propinas actual.
+label.TuitionPaymentPlan.curricularYear.description={0}º ano curricular
 label.TuitionPaymentPlan.curricularSemester.description={0}º semestre curricular
 label.TuitionPaymentPlan.deletion.success=O plano de propinas foi removido com sucesso.
 label.TuitionPaymentPlan.order.up.success=O plano foi ordenado com sucesso.
@@ -453,17 +454,22 @@ label.TuitionDebtCreationBean.infered=Plano de Propinas Inferido?
 label.TuitionDebtCreationBean.tuitionPaymentPlan=Plano de Propinas
 label.TuitionDebtCreationBean.infer.select.registration.and.executionYear=Seleccione a matrícula e o ano lectivo.
 label.TuitionDebtCreationBean.infer.select.enrolment=Seleccione a disciplina.
-label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano de propinas. Verifique os planos criados para o plano curricular do aluno.
+label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano de propinas. Selecione um plano de propinas ou verifique os planos criados para o plano curricular do aluno.
 label.TuitionDebtCreationBean.forceCreation=Forçar lançamento
 
-label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívidas Académicas
+label.TuitionDebtCreationBean.enrolments.one=(1 inscrição)
+label.TuitionDebtCreationBean.enrolments=({0} inscrições)
+
+label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Plano de Propinas
 label.TuitionDebtCreation.confirmTuitionDebtCreation=Confirmar Lançamento da Dívida de Propina
 
 error.TuitionDebtCreationBean.registration.required=A matrícula é obrigatória.
 error.TuitionDebtCreationBean.executionYear.required=O ano lectivo é obrigatório.
 error.TuitionDebtCreationBean.debtDate.required=A data de lançamento é obrigatório.
 error.TuitionDebtCreationBean.enrolment.required=A inscrição é obrigatória.
+error.TuitionDebtCreationBean.tuitionPaymentPlan.required=O plano de propinas é obrigatório.
 error.TuitionDebtCreationBean.event.is.charged=A dívida já está lançada.
+error.TuitionDebtCreationBean.tuition.registration.already.charged=O plano de propinas já está lançado para a matrícula e ano lectivo selecionados.
 
 label.title.manageAcademicTreasurySettings=Configuração Tesouraria Académica
 label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração Tesouraria Académica
@@ -623,14 +629,23 @@ error.AcademicTaxDebtCreation.improvementEvaluation.required=A inscrição de melh
 error.AcademicTaxDebtCreation.event.is.charged=A dívida já está criada.
 error.AcademicTaxDebtCreation.academicTax.not.for.first.year=A taxa académica não é aplicada no primeiro ano lectivo da matrícula.
 error.AcademicTaxDebtCreation.academicTax.not.for.subsequent.years=A taxa académica não é aplicada nos anos lectivos subsequentes a primeira matrícula. 
+error.AcademicTaxDebtCreation.select.registration.and.execution.year=Selecione a matrícula e o ano lectivo.
+error.AcademicTaxDebtCreation.select.academic.tax=Selecione a taxa académica
+error.AcademicTaxDebtCreation.select.improvement.evaluation=Selecione a disciplina.
+error.AcademicTaxDebtCreation.academic.tax.already.charged=A taxa académica já está lançada.
+
+label.AcademicTaxDebtCreationBean.enrolments.one=(1 inscrição)
+label.AcademicTaxDebtCreationBean.enrolments=({0} inscrições)
+
 label.AcademicTreasurSettings.academicalActBlocking.selected=Produto bloqueia actos académicos
 
-label.AcademicServiceRequestDebtCreationBean.create.academicservicerequest.debts=Lançar dívida para serviço académico
 label.AcademicServiceRequestDebtCreation.createAcademicServiceRequestDebtCreationBean=Lançar Dívida para Serviço Académico
+label.AcademicServiceRequestDebtCreation.confirmAcademicServiceRequestDebtCreation=Confirmar Lançamento de Dívida
+
+label.AcademicServiceRequestDebtCreationBean.create.academicservicerequest.debts=Lançar dívida para serviço académico
 label.AcademicServiceRequestDebtCreationBean.registration=Matrícula
 label.AcademicServiceRequestDebtCreationBean.academicServiceRequest=Serviço Académico
 label.AcademicServiceRequestDebtCreationBean.debtDate=Data de Lançamento
-label.AcademicServiceRequestDebtCreation.confirmAcademicServiceRequestDebtCreation=Confirmar Lançamento de Dívida
 label.AcademicServiceRequestDebtCreationBean.academicServiceRequest=Dados do lançamento
 label.AcademicServiceRequestDebtCreationBean.registration=Matrícula
 label.AcademicServiceRequestDebtCreationBean.academicServiceRequest=Serviço Académico
@@ -750,6 +765,7 @@ label.DebtReportRequest.beginDate=Data de inicio
 label.DebtReportRequest.endDate=Data de fim
 label.DebtReportRequest.description=Descrição
 label.DebtReportRequest.decimalSeparator=Separador decimal
+label.DebtReportRequest.includeAnnuledEntries=Incluir anulações
 
 label.DebtReportRequest.debitEntriesSheetName=Dívidas
 label.DebtReportRequest.creditEntriesSheetName=Acertos
@@ -939,8 +955,21 @@ label.TreasuryExemptionReportEntryBean.header.exemptedAmount=Montante isentado
 label.TreasuryExemptionReportEntryBean.header.reason=Motivo
 
 label.ProductReportEntryBean.header.identification=Identificador
+label.ProductReportEntryBean.header.group.code=Código Grupo
+label.ProductReportEntryBean.header.group=Grupo
 label.ProductReportEntryBean.header.code=Código
-label.ProductReportEntryBean.header.name=Nome
+label.ProductReportEntryBean.header.description.pt=Descrição PT
+label.ProductReportEntryBean.header.description.en=Descrição EN
+label.ProductReportEntryBean.header.unitOfMeasure.pt=Unidade de Medida PT
+label.ProductReportEntryBean.header.unitOfMeasure.en=Unidade de Medida EN
+label.ProductReportEntryBean.header.active=Activo?
+label.ProductReportEntryBean.header.legacy=Legado?
+label.ProductReportEntryBean.header.tuitionInstallmentOrder=Nº prestação
+label.ProductReportEntryBean.header.vatType.code=Código Tipo de IVA
+label.ProductReportEntryBean.header.vatType=Tipo de IVA
+label.ProductReportEntryBean.header.exemptionReason.code=Código motivo de isenção
+label.ProductReportEntryBean.header.exemptionReason=Motivo de isenção
+label.ProductReportEntryBean.header.finantialInstitution=Instituição Financeira
 
 # CustomerAccounting
 
