Add close date, integrated in legacy erp, certified document number and certified date Disable customer creation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -755,6 +755,11 @@ label.DebtReportEntryBean.header.tuitionPaymentPlan = Plano de pagamentos
 label.DebtReportEntryBean.header.tuitionPaymentPlanConditions = Condições do plano de pagamentos
 label.DebtReportEntryBean.header.documentAnnuled=Anulado?
 label.DebtReportEntryBean.header.documentAnnuledReason=Razão da anulação
+label.DebtReportEntryBean.header.closeDate=Data de fecho
+label.DebtReportEntryBean.header.openAmountAtERPStartDate=Montante em aberto (01/01/2017)
+label.DebtReportEntryBean.header.exportedInLegacyERP=Exportado no ERP anterior
+label.DebtReportEntryBean.header.erpCertificationDate=Data certificação ERP
+label.DebtReportEntryBean.header.originSettlementNoteForAdvancedCredit=Origem do adiantamento
 
 # DebtReportRequest
 
