Add close date to settlement reports

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -833,6 +833,7 @@ label.SettlementReportEntryBean.header.vatNumber = NIF
 label.SettlementReportEntryBean.header.email = Email
 label.SettlementReportEntryBean.header.address = Morada
 label.SettlementReportEntryBean.header.studentNumber = Nº aluno
+label.SettlementReportEntryBean.header.closeDate=Data de fecho
 
 # PaymentReportEntryBean
 label.PaymentReportEntryBean.header.identification = Identificador
@@ -854,6 +855,7 @@ label.PaymentReportEntryBean.header.vatNumber = NIF
 label.PaymentReportEntryBean.header.email = Email
 label.PaymentReportEntryBean.header.address = Morada
 label.PaymentReportEntryBean.header.studentNumber = Nº aluno
+label.PaymentReportEntryBean.header.closeDate=Data de fecho
 
 # ReimbursementReportEntryBean
 label.ReimbursementReportEntryBean.header.identification = Identificador
